fix dropshadow being visible

--- a/app/templates/src/docs/components/card/card--font.scss
+++ b/app/templates/src/docs/components/card/card--font.scss
@@ -9,12 +9,12 @@
 
     &::before {
       position: absolute;
-      top: 0 - $size__shadow;
+      top: 0 - $size__shadow - $size__gutter * 2;
       left: 0;
       background: $color-bg__card--border;
       width: 100%;
       max-width: $size__content--narrow;
-      height: $size__shadow;
+      height: $size__shadow + $size__gutter * 2;
       content: '';
     }
 
